타임리프 의존성 추가 및 테스트 페이지/컨트롤러 작성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://petdamall2022.cydvkcqdheae.ap-northeast-2.rds.amazonaws.com:3306/petdamall_db?useUnicode=true&characterEncoding=utf-8
 spring.datasource.hikari.username=admin
 spring.datasource.hikari.password=qwer1234!
+
+spring.devtools.livereload.enabled=true
