--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #DataSource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://petdamall2022.cydvkcqdheae.ap-northeast-2.rds.amazonaws.com:3306/petdamall_db?useUnicode=true&characterEncoding=utf-8
+spring.datasource.hikari.jdbc-url=jdbc:mariadb://petdamall2022.cydvkcqdheae.ap-northeast-2.rds.amazonaws.com:3306/petdamall_db?useUnicode=true&characterEncoding=utf-8
 spring.datasource.hikari.username=admin
 spring.datasource.hikari.password=qwer1234!
 
 spring.devtools.livereload.enabled=true
+mybatis.configuration.map-underscore-to-camel-case=true
